fix the time display shifting based on character width

--- a/page/css/style.css
+++ b/page/css/style.css
@@ -117,7 +117,8 @@ input.period-control:focus {
 #time-display {
   display: inline-block;
   margin-right: 2px;
-  text-align: left;
+  text-align: right;
+  width: 70px;
 }
 
 #newTask {
